--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name:               "neguri"
 
 author:
-  email:            your-id@your-email.com
+  email:            projekct@gmail.com
 
 copyright:
   year:             2017
