--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "neguri"
+name:               "NEGURI"
 
 author:
   email:            projekct@gmail.com
